<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.randomgallery.android.ui.home.HomeFragment"
        android:label="@string/nav_label_home" />

    <fragment
        android:id="@+id/randomPicFragment"
        android:name="com.example.randomgallery.android.ui.pic.RandomPicFragment"
        android:label="@string/nav_label_random_pic" />

    <fragment
        android:id="@+id/picListFragment"
        android:name="com.example.randomgallery.android.ui.piclist.PicListFragment"
        android:label="@string/nav_label_pic_list" />

    <fragment
        android:id="@+id/groupListFragment"
        android:name="com.example.randomgallery.android.ui.group.GroupListFragment"
        android:label="@string/nav_label_group_list" />

    <fragment
        android:id="@+id/randomGalleryFragment"
        android:name="com.example.randomgallery.android.ui.gallery.RandomGalleryFragment"
        android:label="@string/nav_label_gallery" />

    <fragment
        android:id="@+id/downloadManageFragment"
        android:name="com.example.randomgallery.android.ui.download.DownloadManageFragment"
        android:label="@string/nav_label_download_manage" />

    <fragment
        android:id="@+id/downloadListFragment"
        android:name="com.example.randomgallery.android.ui.downloadlist.DownloadListFragment"
        android:label="@string/nav_label_download_list" />

    <fragment
        android:id="@+id/downloadDetailFragment"
        android:name="com.example.randomgallery.android.ui.downloaddetail.DownloadDetailFragment"
        android:label="@string/nav_label_download_detail" />

    <fragment
        android:id="@+id/randomGifFragment"
        android:name="com.example.randomgallery.android.ui.gif.RandomGifFragment"
        android:label="@string/nav_label_random_gif" />
</navigation>
